--- a/info.yml
+++ b/info.yml
@@ -4,6 +4,7 @@ project:
   teamId: 'testing_showcase'
   identities: {}
   notifications: {}
+  joinCode: '123'
   members:
     member1:
       name: 'Jorge'
